--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
